--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+body{
+  font-family: "Funnel Sans";
+  background-color: #f2f2f2 ;
+}
+input{
+  background-color:#f2f2f2 ;
+}
 :root {
   height: 100vh;
   width: 100vw;
